# betago

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ai/: heuristic.rs  mod.rs  random.rs
src/core/: board.rs  error.rs  game.rs  mod.rs
src/gui/: app.rs
tests/: capture.rs  ko_rule.rs
