[package]
name = "betago"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
eframe = "0.31.1"
egui = "0.31.1"
# env_logger = "0.11.8"
# log = "0.4.27"
# ndarray = "0.16.1"
rand = "0.9.1"
rstest = "0.25.0"
thiserror = "2.0.12"
